<resources>
    <string name="app_name">more.tech.4.0.android</string>
    <string name="vtb_name">ВТБ</string>
    <string name="news_name">NEWS</string>
    <string name="next">Далее</string>
    <string name="username_hint">Имя пользователя</string>
    <string name="password_hint">Пароль</string>
    <string name="sing_in_button_text">Войти</string>
    <string name="dont_have_an_account">Нет аккаунта?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="email">Email</string>
    <string name="confirm_password">Повтор пароля</string>
    <string name="field">Должность</string>
    <string name="agree">Я согласен(а) с правилами использования</string>
    <string name="different_job">Введите вашу должность</string>
    <string name="header">ВТБ Новости</string>
    <string name="digest">Дайджест</string>
    <string name="trend">Тренд</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_password">Подтвердите пароль</string>
    <string name="edit_email">Редактировать Email</string>
    <string name="edit_name">Редактировать Имя</string>
    <string name="profile">Профиль</string>
    <string name="confirmation">Подтверждение</string>
    <string name="question">Вы уверены что хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="insights">Инсайты</string>
</resources>