<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/vtb_name_text"
        style="@style/vtb_text_logo_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/vtb_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/news_name_text"
        style="@style/news_text_logo_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_name"
        app:layout_constraintLeft_toLeftOf="@+id/vtb_name_text"
        app:layout_constraintRight_toRightOf="@+id/vtb_name_text"
        app:layout_constraintTop_toBottomOf="@+id/vtb_name_text" />

    <EditText
        android:id="@+id/user_name_edit_text"
        style="@style/edit_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="134dp"
        android:background="@drawable/bottom_border_edit_text"
        android:drawableStart="@drawable/user_image_white"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintLeft_toLeftOf="@id/news_name_text"
        app:layout_constraintRight_toRightOf="@id/news_name_text"
        app:layout_constraintTop_toBottomOf="@id/news_name_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/hint_color"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_edit_text"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/hint_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_border_edit_text"
            android:drawableStart="@drawable/password_white"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingTop="10dp"
            app:expandedHintEnabled="true"
            app:hintAnimationEnabled="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sing_in_button"
        style="@style/button_sing_in_style"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="70dp"
        android:text="@string/sing_in_button_text"
        app:layout_constraintEnd_toEndOf="@id/password_layout"
        app:layout_constraintStart_toStartOf="@id/password_layout"
        app:layout_constraintTop_toBottomOf="@id/password_layout" />

    <TextView
        android:id="@+id/no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="130dp"
        android:text="@string/dont_have_an_account"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="@id/sing_in_button"
        app:layout_constraintStart_toStartOf="@id/sing_in_button"
        app:layout_constraintTop_toBottomOf="@id/sing_in_button" />

    <TextView
        android:id="@+id/sing_up_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/register"
        android:textColor="@color/white_blue"
        app:layout_constraintBottom_toBottomOf="@id/no_account"
        app:layout_constraintStart_toEndOf="@id/no_account"
        app:layout_constraintTop_toTopOf="@id/no_account" />

</androidx.constraintlayout.widget.ConstraintLayout>