<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/half_white"
    tools:context=".presentation.fragments.main.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_vtb"
            style="@style/header_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="top|center"
            android:text="@string/header" />

        <TextView
            android:id="@+id/digest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="18dp"
            android:text="@string/digest"
            android:textColor="@color/dark_blue" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading"
            app:lottie_url="REPLACE_JSON_URL" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/digest_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="14dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:id="@+id/trend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="20dp"
            android:text="@string/trend"
            android:textColor="@color/dark_blue" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trends_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="26dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>