<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/half_white">

    <ImageView
        android:id="@+id/back_to_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="21dp"
        android:src="@drawable/arrow_back_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_edit_username"
        style="@style/header_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:gravity="top|center"
        android:text="@string/edit_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_field"
        style="@style/search_edit_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/blue_corners_shape"
        android:drawableStart="@drawable/mail_black"
        android:hint="@string/email"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_edit_username" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/hint_color"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_field"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            style="@style/search_edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_corners_shape"
            android:drawableStart="@drawable/password_black"
            android:hint="@string/check_password"
            android:inputType="textPassword"
            android:paddingTop="10dp"
            app:expandedHintEnabled="true"
            app:hintAnimationEnabled="true" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>