<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/half_white"
    tools:context=".presentation.fragments.profile.ProfileFragment">

    <ImageView
        android:id="@+id/log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="21dp"
        android:src="@drawable/log_out"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_profile"
        style="@style/header_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:gravity="top|center"
        android:text="@string/profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/user_photo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/profile_no_picture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_profile" />

    <TextView
        android:id="@+id/username_profile"
        style="@style/profile_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:gravity="top|center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_photo" />

    <ImageView
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="29dp"
        android:src="@drawable/divider_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_profile" />

    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="29dp"
        android:src="@drawable/user_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <TextView
        android:id="@+id/username_header"
        style="@style/profile_small_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="13dp"
        android:gravity="top|center"
        android:text="@string/username_hint"
        app:layout_constraintLeft_toRightOf="@id/mail_icon"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <TextView
        android:id="@+id/username_data"
        style="@style/profile_data_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:gravity="top|center"
        app:layout_constraintLeft_toLeftOf="@id/username_header"
        app:layout_constraintTop_toBottomOf="@id/username_header" />

    <ImageView
        android:id="@+id/edit_icon_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginRight="17dp"
        android:src="@drawable/edit_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2" />


    <ImageView
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/divider_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_data" />

    <ImageView
        android:id="@+id/mail_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="29dp"
        android:src="@drawable/mail_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1" />

    <TextView
        android:id="@+id/email_header"
        style="@style/profile_small_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="13dp"
        android:gravity="top|center"
        android:text="@string/email"
        app:layout_constraintLeft_toRightOf="@id/mail_icon"
        app:layout_constraintTop_toBottomOf="@id/divider1" />

    <TextView
        android:id="@+id/email_data"
        style="@style/profile_data_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:gravity="top|center"
        app:layout_constraintLeft_toLeftOf="@id/email_header"
        app:layout_constraintTop_toBottomOf="@id/email_header" />

    <ImageView
        android:id="@+id/edit_icon_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginRight="17dp"
        android:src="@drawable/edit_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1" />

    <ImageView
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/divider_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_data" />

    <ImageView
        android:id="@+id/sphere_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="29dp"
        android:src="@drawable/ellipse_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider3" />

    <TextView
        android:id="@+id/sphere_header"
        style="@style/profile_small_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="13dp"
        android:gravity="top|center"
        android:text="@string/field"
        app:layout_constraintLeft_toRightOf="@id/sphere_icon"
        app:layout_constraintTop_toBottomOf="@id/divider3" />

    <TextView
        android:id="@+id/sphere_data"
        style="@style/profile_data_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:gravity="top|center"
        app:layout_constraintLeft_toLeftOf="@id/sphere_header"
        app:layout_constraintTop_toBottomOf="@id/sphere_header" />

    <ImageView
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/divider_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sphere_data" />


</androidx.constraintlayout.widget.ConstraintLayout>